# c-module-dep-virality-repro

./: CMakeLists.txt  Readme.md  Three.swift  Two.swift
include/: One.h  module.modulemap
